# crunchbase

./: .gitignore  LICENSE.txt  README.md  crunchbase.cabal
Data/API/CrunchBase/: Company.hs  CompanyQuery.hs  CompanyResponse.hs  ExternalLink.hs  FinancialOrganization.hs  FinancialOrganizationQuery.hs  FundingRound.hs  Image.hs  Person.hs  PersonQuery.hs  PersonResponse.hs  Product.hs  ProductQuery.hs  Query.hs  Response.hs  SearchPage.hs  SearchQuery.hs  SearchResult.hs  ServiceProvider.hs  ServiceProviderQuery.hs  VideoEmbed.hs
Data/Time/: FuzzyDate.hs
Data/Time/FuzzyDate/: Private.hs
Network/API/: CrunchBase.hs
Network/API/CrunchBase/: Request.hs  Response.hs
Network/API/CrunchBase/Response/: Search.hs
Network/API/CrunchBase/Response/Search/: Result.hs
doc/: crunchbase-api-v1.md  fields.txt
